Sat Mar 18 21:56:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed stupid segfault using --list when there are no loadable
	images.

Sat Mar 18 14:06:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* --list tidy up.

Sat Mar 18 02:56:03 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* More --verbose twiddles.

Sat Mar 18 02:18:39 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Made the --verbose output more useful, and prettier ;)

Sat Mar 18 00:37:17 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Made the -V, --verbose option give cooler output on loading
	mulitple images. It's pretty flim now.

Sat Mar 18 00:32:42 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -U, --loadables, and -u, --unloadables. They don't show
	images, just list all the files from the filelist that are
	loadable or unloadable, respectively.

Fri Mar 17 22:58:14 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Don't need to create checkerboard for list mode, montage mode,
	index mode, etc...

Fri Mar 17 22:43:27 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* We don't need to allocate space for the file info unless we
	intend to use it. Saves RAM on big file lists...

Fri Mar 17 22:18:50 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Big changes. I am tired ;)
	* You can now sort the filelist in any mode.
	* Sorting by name/filename is *fast*
	* Sorting by image properties such as width, height, type etc
	incurs a delay at startup while the images are preloaded. This
	could get big for large lists of files.
	* Added a -p, --preload option to force preloading before running
	a slideshow. This weeds out images that imlib2 can't load so that
	the initial number of slides is accurate. Normally, the bad/non
	images are weeded out as you go, causing the number of slides to
	update as things go. Preload is great for montage and index modes,
	as it ensures the correctly sized space is allocated for the
	images/thumbnails/whatever.
