@@ -1,3 +1,11 @@
+Sun Mar 19 20:55:57 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Main event loop tidy up.
+
+Sat Mar 18 21:59:55 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Added a coupla more tests...
+
 Sat Mar 18 21:56:08 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* Fixed stupid segfault using --list when there are no loadable
